--- a/index.html
+++ b/index.html
@@ -3,14 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simply Recepies</title>
+    <title>Simply Recipes</title>
   </head>
   <body>
     <div>
       <header>
-        <img src="assets/logo.png" alt="" width="200" />
+        <a href="#"><img src="assets/logo.png" alt="" width="200" /></a>
         <p>Part of <strong>A SIMPLY FABULOUS THANKSGIVING</strong></p>
       </header>
+      <main>
+        <h1>Focaccia with Caramelized Onions, Cranberries, and Brie</h1>
+        <p>
+          Wow your taste buds with this festive Focaccia appetizer topped woth sweet caramelized onions, tart
+          cranberries, and creamy brie. It will bocome your new favorite holiday starter!
+        </p>
+        <img src="assets/focaccia.png" alt="" />
+        <p>FEATURED IN: <a href="#">Fresh Cranberry Recipes</a></p>
+        <br />
+        <h4>Ingredients</h4>
+        <hr />
+        <h4>For the focaccia:</h4>
+        <ul>
+          <li>4 cups (500g) all-purpuse flour</li>
+          <li>1 1/2 teaspoons instant yeast</li>
+          <li>1 1/2 teaspoons salt</li>
+          <li>1 3/4 cups (350g) lukewarm water</li>
+          <li>1/4 cup extra virgin olive oil, plus more for the pan</li>
+        </ul>
+        <h4>For the topping:</h4>
+        <ul>
+          <li>3 medium yellow onions, thinly sliced</li>
+          <li>1 tablespoon balsamic vinegar</li>
+          <li>1-2 tablespoons olive oil, for the brushing on top</li>
+          <li>
+            10 ounces brie, cut into cubes (scrape rind off with a paring knife if desired, though it's not necessary)
+          </li>
+          <li>1 1/2 cups fresh or frozen cranberries</li>
+        </ul>
+      </main>
     </div>
   </body>
 </html>
