Finished the html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <img src="assets/focaccia.png" alt="" />
         <p>FEATURED IN: <a href="#">Fresh Cranberry Recipes</a></p>
         <br />
-        <h4>Ingredients</h4>
+        <h3>Ingredients</h3>
         <hr />
         <h4>For the focaccia:</h4>
         <ul>
@@ -40,6 +40,16 @@
           </li>
           <li>1 1/2 cups fresh or frozen cranberries</li>
         </ul>
+        <h3>Method</h3>
+        <hr />
+        <ol>
+          <li>
+            <h4>Make the focaccia dough</h4>
+            <br />In a medium-sized mixing bowl, or in a stand mixer with a paddle attachment, mix together all the
+            dough ingredients until the flour is fully absorbed. you don't need to actually knead the dough, though I
+            sometimes knead it a few times in the bowl when mixing by hand to incorporate the last of the flour...
+          </li>
+        </ol>
       </main>
     </div>
   </body>
