Forgot the footer

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             sometimes knead it a few times in the bowl when mixing by hand to incorporate the last of the flour...
           </li>
         </ol>
+        <footer>Ream more on <a href="#">Simply recipes</a></footer>
       </main>
     </div>
   </body>
