--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simply Recipes</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
+    <div class="headtitle">
       <header>
-        <a href="#"><img src="assets/logo.png" alt="" width="200" /></a>
-        <p>Part of <strong>A SIMPLY FABULOUS THANKSGIVING</strong></p>
+        <a href="#"><img src="assets/logo.png" alt="logo" width="200" /></a>
+        <p><br />Part of <strong>A SIMPLY FABULOUS THANKSGIVING</strong><br /><br /></p>
       </header>
+    </div>
+    <div>
       <main>
         <h1>Focaccia with Caramelized Onions, Cranberries, and Brie</h1>
         <p>
@@ -18,7 +21,10 @@
           cranberries, and creamy brie. It will bocome your new favorite holiday starter!
         </p>
         <img src="assets/focaccia.png" alt="" />
-        <p>FEATURED IN: <a href="#">Fresh Cranberry Recipes</a></p>
+        <p class="feature">
+          FEATURED IN: <br />
+          <a href="#">Fresh Cranberry Recipes</a>
+        </p>
         <br />
         <h3>Ingredients</h3>
         <hr />
