Borders and colors

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           cranberries, and creamy brie. It will bocome your new favorite holiday starter!
         </p>
         <img src="assets/focaccia.png" alt="" />
-        <p class="feature">
-          FEATURED IN: <br />
-          <a href="#">Fresh Cranberry Recipes</a>
-        </p>
+        <dl class="feature">
+          <dd>FEATURED IN:</dd>
+          <dd><a href="#">Fresh Cranberry Recipes</a></dd>
+        </dl>
         <br />
         <h3>Ingredients</h3>
         <hr />
