--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
           Wow your taste buds with this festive Focaccia appetizer topped woth sweet caramelized onions, tart
           cranberries, and creamy brie. It will bocome your new favorite holiday starter!
         </p>
-        <img src="assets/focaccia.png" alt="" />
+        <img src="assets/focaccia.png" alt="focaccia" />
+        <p class="imagecredit">Image: Sally Vegas</p>
         <dl class="feature">
-          <dd>FEATURED IN:</dd>
-          <dd><a href="#">Fresh Cranberry Recipes</a></dd>
+          <dd><strong>FEATURED IN:</strong></dd>
+          <dd><a href="#">Fresh Cranberry Recipes That Go Beyond Sauce </a></dd>
         </dl>
         <br />
         <h3>Ingredients</h3>
